examples/v0.4/errors/schema_array_element_mismatch.nova
User: M = {
    name: S
}

users: [User] = [
    {
        name = "Varun"
    },

    123
]

/*
Expected Error:

Invalid datatype inside array.
*/